@@ -31,10 +31,9 @@ video:
     subtitle not cleared
     subtitle could be asyncron
     reduce warnings after channel switch
-    grab image with scaling support
+    grab image with hardware and better scaling support
     suspendoutput didn't show logo or black pictures
 	(must detect video format to show image)
-    first OSD can show random chaos
 
 vdpau:
     VdpPreemptionCallback handling (under construction)
